chore: update runner

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -5,3 +5,4 @@ verbatim = .gitignore .DS_STORE vendor/*
 ## Note: it is recommended that name follows the format [a-zA-Z0-9]+ (only numbers and character), use camelCase to separate words (not underscores!)
 name = backend-skeleton
 production_config = /etc/backend-skeleton/config.ini
+module_name = main
